RESOLVED FIXED146050
[WK2] valueForKey() shouldn't copy the defaults map
https://bugs.webkit.org/show_bug.cgi?id=146050
Summary [WK2] valueForKey() shouldn't copy the defaults map
Zan Dobersek
Reported 2015-06-16 23:21:06 PDT
[WK2] valueForKey() shouldn't copy the defaults map
Attachments
Patch (1.56 KB, patch)
2015-06-17 01:07 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2015-06-17 01:07:17 PDT
Sam Weinig
Comment 2 2015-06-17 05:53:18 PDT
Comment on attachment 255005 [details] Patch Nice catch!
Zan Dobersek
Comment 3 2015-06-17 08:21:59 PDT
Comment on attachment 255005 [details] Patch Clearing flags on attachment: 255005 Committed r185650: <http://trac.webkit.org/changeset/185650>
Zan Dobersek
Comment 4 2015-06-17 08:22:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.