[WK2] valueForKey() shouldn't copy the defaults map https://bugs.webkit.org/show_bug.cgi?id=146050

Reviewed by Sam Weinig.

* Shared/WebPreferencesStore.cpp:
(WebKit::valueForKey): Avoid copying the defaults HashMap by binding the return value to a reference.


Canonical link: https://commits.webkit.org/164103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185650 268f45cc-cd09-0410-ab3c-d52691b4dbfc